.circleci/kubernetes/base/deployment-webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: happy-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: happy-webapp
  template:
    metadata:
      labels:
        app: happy-webapp
    spec:
      nodeSelector:
        karpenter.sh/nodepool: spondemand-amd64
      containers:
        - name: webapp
          image: happy-webapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
