.circleci/kubernetes/base/service-server.yml
apiVersion: v1
kind: Service
metadata:
  name: happy-server
spec:
  selector:
    app: happy-server
  ports:
    - port: 80
      targetPort: 3005
  type: ClusterIP
