.circleci/kubernetes/base/service-webapp.yml
apiVersion: v1
kind: Service
metadata:
  name: happy-webapp
spec:
  selector:
    app: happy-webapp
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
